# fri

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
benches/: README.md  fri.rs  frida.rs  mod.nu
examples/: fri.rs  frida.rs
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs
src/: blake3.rs  commit.rs  folding.rs  frida.rs  interpolation.rs  lib.rs  prover.rs  rng.rs  tests.rs  utils.rs
src/algorithms/: mod.rs  sha3.rs
src/frida/: mod.rs  pcs.rs  tests.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
