[package]
name = "dragoonfri"
version = "0.1.0"
edition = "2021"
description = "Fast Reed-solomon Interactive oracle proof of proximity"
repository = "https://gitlab.isae-supaero.fr/dragoon/fri"
readme = "README.md"
license = "MIT"
authors = [
    "Antonin Bretagne <antonin.bretagne@student.isae-supaero.fr>", # author
    "Antoine Stevan <antoine.stevan@isae-supaero.fr>",             # maintainer
    "Jonathan Detchart <jonathan.detchart@isae-supaero.fr>",       # maintainer
]

[workspace]
members = [ "proc_macro", "test_utils" ]

[workspace.dependencies]
ark-serialize = { version = "0.4.2", default-features = false }
winter-math = "0.9"

[lib]

[dependencies]
ark-ff = { version = "0.4.2", default-features = false }
ark-poly = { version = "0.4.2", default-features = false }
ark-serialize = { workspace = true }
rs_merkle = { version = "1.4.2", default-features = false }
derive_more = "0.99.18"
derive-where = "1.2.7"
dragoonfri-proc-macros = "0.1.0"
blake3 = { version = "1.5.1", default-features = false, optional = true }
sha3 = { version = "0.10.8", default-features = false, optional = true }

[dev-dependencies]
winter-fri = "0.9"
winter-utils = "0.9"
winter-rand-utils = "0.9"
winter-math = { workspace = true }
rand = "0.8.5"
criterion = "0.5.1"
dragoonfri-test-utils = "0.1.0"
csv = "1.3.0"

[features]
sha3 = ["dep:sha3"]
sha3_asm = ["sha3", "sha3/asm"]
blake3 = ["dep:blake3"]
frida = []
interpolation = []
default = ["sha3", "blake3", "frida", "interpolation"]

[[bench]]
name = "fri"
harness = false
required-features = ["blake3"]

[[bench]]
name = "frida"
harness = false
required-features = ["blake3"]
