[package]
name = "dragoonfri-test-utils"
version = "0.1.0"
edition = "2021"
description = "Fast Reed-solomon Interactive oracle proof of proximity - Test utils"
repository = "https://gitlab.isae-supaero.fr/dragoon/fri"
readme = "../README.md"
license = "MIT"
authors = [
    "Antonin Bretagne <antonin.bretagne@student.isae-supaero.fr>", # author
    "Antoine Stevan <antoine.stevan@isae-supaero.fr>",             # maintainer
    "Jonathan Detchart <jonathan.detchart@isae-supaero.fr>",       # maintainer
]

[lib]

[dependencies]
ark-ff = { version = "0.4.2", default-features = false }
rand = "0.8.5"
# documentation
winter-math = { workspace = true }
